unpackaged/main/default/objects/Exploratory_Finding__c/Exploratory_Finding__c.object-meta.xml
<CustomObject>
    <description>A free-form finding logged during a cycle (optionally within an Exploratory_Session__c), not tied to any case. Blank cycle = logged in a standalone session, visible only in that session&#39;s workspace. Cycled findings are the team log: anyone in the cycle audience reads them; edit/delete is author-or-UAT_Console-admin, enforced in Apex — supersedes the 2026-07-23 any-member rule. Public Read/Write: gating lives in Apex (UatAudienceService), matching Test_Execution__c&#39;s posture.</description>
    <label>Finding</label>
    <nameField>
        <displayFormat>EF-{00000}</displayFormat>
        <label>Finding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Findings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>