unpackaged/main/default/objects/Exploratory_Finding__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>When the finding was logged.</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>