unpackaged/main/default/objects/Exploratory_Finding__c/fields/Exploratory_Session__c.field-meta.xml
<CustomField>
    <fullName>Exploratory_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The session this finding was logged during. Null = logged directly in the cycle log (including every pre-session finding). SetNull: deleting a session preserves its findings — findings are the durable output.</description>
    <label>Exploratory Session</label>
    <referenceTo>Exploratory_Session__c</referenceTo>
    <relationshipLabel>Findings</relationshipLabel>
    <relationshipName>Findings</relationshipName>
    <type>Lookup</type>
</CustomField>