unpackaged/main/default/objects/Exploratory_Finding__c/fields/External_Ref__c.field-meta.xml
<CustomField>
    <fullName>External_Ref__c</fullName>
    <description>Jira/ClickUp ticket key or URL, captured when Workflow_Status__c moves to an Added-to-* value (prompted, skippable). Same write path and gating as Workflow_Status__c: admin-only via UatReportController.setFindingWorkflowStatus; read-only for UAT_Tester.</description>
    <label>External Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>