unpackaged/main/default/objects/Exploratory_Finding__c/fields/No_Evidence_Reason__c.field-meta.xml
<CustomField>
    <fullName>No_Evidence_Reason__c</fullName>
    <description>The documented escape hatch for a High or Critical defect with no attachment. One of the two must be present or the finding will not save, and the session will not finish — the point is that &quot;no evidence&quot; becomes a deliberate, readable statement rather than an omission. Ignored for every other type and severity.</description>
    <label>Why No Evidence?</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>