unpackaged/main/default/objects/Exploratory_Finding__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>DEPRECATED 2026-08-06 - superseded by Type__c. Was a Pass/Fail verdict on a finding, which conflated a test outcome with a defect description (a Pass finding with a Critical severity says nothing). Kept, not deleted, so the migration is reversible; no longer read or written by any code. Do not use in new work.</description>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>