unpackaged/main/default/objects/Exploratory_Finding__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Where the finding came from, and the only thing that distinguishes the two flows now that they share this object: Session = logged ad-hoc (Exploratory_Session__c / Source_Note__c populated), Test case = raised against a scripted step (Test_Step_Result__c / Test_Execution__c populated). Stamped server-side by UatRunController.saveFinding, never chosen by a tester. This is the triage filter.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Session</fullName>
                <default>true</default>
                <label>Session</label>
            </value>
            <value>
                <fullName>Test case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>