unpackaged/main/default/objects/Exploratory_Finding__c/fields/Source_Note__c.field-meta.xml
<CustomField>
    <fullName>Source_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The session entry this finding was promoted from. Drives the entry&#39;s &quot;→ EF-00003&quot; badge and the finding&#39;s &quot;From session note · {timestamp}&quot; line. SetNull, not Restrict: a tester deleting a note must not be blocked by a finding that has since taken on its own life — the finding keeps its copied text and evidence and simply loses the back-link.</description>
    <label>Source Note</label>
    <referenceTo>Session_Note__c</referenceTo>
    <relationshipLabel>Findings</relationshipLabel>
    <relationshipName>Findings</relationshipName>
    <type>Lookup</type>
</CustomField>