unpackaged/main/default/objects/Exploratory_Finding__c/fields/Test_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Test_Cycle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Nullable: blank = logged in a standalone (cycle-less) session, visible only in that session&#39;s workspace. Cycled findings form the team log: anyone in the cycle audience reads them; edit/delete is author-or-UAT_Console-admin, enforced in Apex. Restricted delete: UatCycleAdminController.deleteCycle purges a cycle&#39;s findings explicitly.</description>
    <label>Test Cycle</label>
    <referenceTo>Test_Cycle__c</referenceTo>
    <relationshipLabel>Exploratory Findings</relationshipLabel>
    <relationshipName>Exploratory_Findings</relationshipName>
    <type>Lookup</type>
</CustomField>