unpackaged/main/default/objects/Exploratory_Finding__c/fields/Tester__c.field-meta.xml
<CustomField>
    <fullName>Tester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who logged this finding.</description>
    <label>Tester</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Exploratory Findings</relationshipLabel>
    <relationshipName>Exploratory_Findings</relationshipName>
    <type>Lookup</type>
</CustomField>