unpackaged/main/default/objects/Exploratory_Finding__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>One-line headline — what an admin reads in a triage list. Required and at least 10 characters, enforced in UatRunController.saveFinding rather than by a validation rule so the migration can backfill legacy rows first. Promote-to-finding suggests it from the source note&#39;s first line; it stays editable.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>