unpackaged/main/default/objects/Exploratory_Finding__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>What kind of thing this is. REPLACES Result__c, which was a pass/fail verdict and made no sense on a finding — a &quot;Pass&quot; finding with a Critical severity is not a statement about anything. Severity applies ONLY when this is Defect; UatRunController.saveFinding force-clears severity for every other type.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Defect</fullName>
                <default>true</default>
                <label>Defect</label>
            </value>
            <value>
                <fullName>Works as expected</fullName>
            </value>
            <value>
                <fullName>Suggestion</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>