unpackaged/main/default/objects/Exploratory_Finding__c/fields/What_Expected__c.field-meta.xml
<CustomField>
    <fullName>What_Expected__c</fullName>
    <description>What the tester expected to happen.</description>
    <label>What Did You Expect</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>