unpackaged/main/default/objects/Exploratory_Finding__c/fields/What_Happened__c.field-meta.xml
<CustomField>
    <fullName>What_Happened__c</fullName>
    <description>What actually happened.</description>
    <label>What Happened</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>