unpackaged/main/default/objects/Exploratory_Finding__c/fields/What_Testing__c.field-meta.xml
<CustomField>
    <fullName>What_Testing__c</fullName>
    <description>What the tester was doing when they found this. Required via validation rule (long text cannot be DB-required).</description>
    <label>What Were You Testing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>