unpackaged/main/default/objects/Exploratory_Finding__c/fields/Workflow_Status__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Status__c</fullName>
    <description>Admin triage disposition — has this finding been pushed to the external tracker? Orthogonal to Type__c (what kind of thing) and Severity__c (how bad). Written ONLY by UatReportController.setFindingWorkflowStatus behind the UAT_Console gate; UAT_Tester holds this field read-only, and UatRunController.saveFinding never touches it. Client mirror: lwc/uatConstants WORKFLOW_STATUSES.</description>
    <label>Workflow Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Added to Jira</fullName>
            </value>
            <value>
                <fullName>Added to ClickUp</fullName>
            </value>
            <value>
                <fullName>Not verified</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>