unpackaged/main/default/objects/Exploratory_Finding__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tester__c</columns>
    <columns>Result__c</columns>
    <columns>Date__c</columns>
    <columns>Exploratory_Session__c</columns>
    <columns>Severity__c</columns>
    <columns>Source_Note__c</columns>
    <columns>What_Expected__c</columns>
    <columns>What_Happened__c</columns>
    <columns>What_Testing__c</columns>
    <columns>No_Evidence_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>